testsuites/LLT/compiler/Diagnose/lex_test/lex_expected_back_quote/case6.expect.out
error: expected identifier, found '`'
  ==> case6.cj:14:7:
   | 
14 |     `var `let
   |          ^ expected identifier
   | 

1 error generated, 1 error printed.
